--- a/nextjs/docker-compose.yml
+++ b/nextjs/docker-compose.yml
@@ -1,10 +1,7 @@
 version: '3.9'
 services:
   frontend:
-    build:
-      dockerfile: dockerfile.prod
-      context: .
-
+    build: .
     restart: always
     networks:
       - prod
